# livevalidator

./: .coverage  .cursorrules  .gitignore  DATABRICKS_DEPLOYMENT.md  QUEUE_AND_HISTORY_IMPLEMENTATION.md  README.md  TYPE_MAPPINGS_FEATURE.md  app.yaml  databricks.yml  databricks.yml.example  databricks_template_schema.json  pyproject.toml
src/app/: .env.template  .gitignore  README.md  app.yaml  contributing.md  pyproject.toml  requirements.txt
src/app/backend/: app.py  db.py  models.py  requirements.txt  utils.py
src/app/backend/livevalidator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/backend/routers/: queries.py  tables.py  validation_config.py
src/app/backend/services/: __init__.py  dashboards_service.py  entity_service.py  queries_service.py  schedules_service.py  systems_service.py  tables_service.py  triggers_service.py  validation_config_service.py
src/app/backend/sql/: add_type_transformations.sql  ddl.sql  grants.sql  seed_test_data.sql
src/app/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
src/app/frontend/src/: App.jsx  App.jsx.backup  index.css  main.jsx
src/app/frontend/src/components/: Checkbox.jsx  ConfigOverrides.jsx  DashboardDirectoryPane.jsx  DashboardPieChart.jsx  (+8 more)
src/app/jobs/: run_validation
src/app/resources/: job_sentinel.yml
src/app/src/: App.jsx
src/app/src/components/: TagInput.jsx
src/app/src/services/: api.js
src/app/src/utils/: csvParser.js
src/app/src/views/: ConfigurationView.jsx  QueriesView.jsx  SchedulesView.jsx  SystemsView.jsx  TablesView.jsx  ValidationResultsView.jsx
(+100 files in other folders)
